# forge

./: Cargo.toml  README.md
context/: context_flow.py  context_models.py  requirements.txt
skills/forge-adjusting/: SKILL.md
skills/forge-orchestrating/: SKILL.md
skills/forge-planning/: COVERAGE.md  REFERENCES.md  SKILL.md
skills/forge-protocol/: CLAIMING.md  CONTEXT-READING.md  CONTEXT-WRITING.md  SKILL.md  TESTING.md
src/: config.rs  context.rs  context_flow.rs  export.rs  features.rs  git.rs  init.rs  main.rs  runner.rs  skills.rs  template.rs  tui.rs  tui_orchestrator.rs  verify.rs
