[package]
name = "forge"
version = "0.1.0"
edition = "2024"
description = "CLI that orchestrates autonomous coding agents in a managed development loop"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
