[package]
name = "forge"
version = "0.1.0"
edition = "2024"
description = "CLI that orchestrates autonomous coding agents in a managed development loop"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
ratatui = "0.30"
crossterm = "0.28"
portable-pty = "0.9"
vt100 = "0.16"
tui-term = "0.3"
tokio = { version = "1", features = ["full"] }
bytes = "1"

[dev-dependencies]
tempfile = "3"
